k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservations
  namespace: reservations-staging
spec:
  selector:
    app: reservations
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: reservations-staging
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
