k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservations
  namespace: reservations-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: reservations-staging.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservations
                port:
                  number: 80
